2013-04-16  Pedro Vicente  <pvicente@uci.edu>

        * nco_get_rec_dmn_nm() Return array of record names 

2013-04-11  Pedro Vicente  <pvicente@uci.edu>

	* Add cmip5_1.cdl obs_1.cdl
  
        * ncbo test #22; Process relative match from model to observations cmip5_1.nc -> obs_1.nc

        * ncbo test #23; Process relative match from observations to model obs_1.nc -> cmip5_1.nc

2013-04-10  Pedro Vicente  <pvicente@uci.edu>

	* trv_tbl_rel_mch()  Relative match of object in table 1 to table 2 
  
	* ncbo test #21; Relative match of object in table 1 to table 2

2013-04-09  Pedro Vicente  <pvicente@uci.edu>

	* gpe_chk() Check valid GPE new name
  
	* pck_cpy_attr() Inquire about copying attributes "scale_factor", "add_offset" 
  
2013-04-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.1 release procedure:
 	Changes since nco-4_3_0: ncbo -G --unn commute
	cd ~/nco;cvs tag -d nco-4_3_1;cvs tag -d nco-4_3_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.1 release"
	cvs tag -c nco-4_3_1;cvs tag -c nco-4_3_1-1

	* Add in_grp_[12].nc

2013-04-06  Pedro Vicente  <pvicente@uci.edu>

	* trv_tbl_prc() Match different types for processed objects

	* ncbo test #20; Match different types for processed objects

2013-04-03  Pedro Vicente  <pvicente@uci.edu>

	* trv_tbl_prc() Process common objects

	* trv_tbl_fix() Copy processing type fixed object

	* Add ncbo test #19; Copy associated coordinates as non processed

2013-03-29  Charlie Zender  <zender@uci.edu>

	* ncbo: now almost commutative w/r/t variable rank fixes TODO nco552

2013-03-28  Charlie Zender  <zender@uci.edu>

	* Clarify DAP server errors

	* ncbo: document GPE and --union

	* ncbo: Implement GPE

	* ncbo: Implement --union/--intersection switch

	* Fix ncbo bug: unswap CNV_CCM_CCSM_CF and FIX_REC_CRD arguments to trv_tbl_mch()
	http://nco.sf.net#bug_ncbo_ccm_ccsm_cf

	* NCO 4.3.0 release procedure:
 	Changes since nco-4_2_6: ncbo -g, ncatted NULs, ncap2 rounding