@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_trv.c,v 1.175 2013-04-18 03:19:54 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_trv.c,v 1.176 2013-04-18 03:54:43 pvicente Exp $ */
 
 /* Purpose: netCDF4 traversal storage */
 
@@ -254,7 +254,7 @@ trv_tbl_srt /* [fnc] Sort traversal table */
 } /* end trv_tbl_srt() */
 
 void                          
-trv_tbl_mch                            /* [fnc] Match 2 tables (find common objects) and process common objects  */
+trv_tbl_mch                            /* [fnc] Match 2 tables (find common objects) and export common objects  */
 (const int nc_id_1,                    /* I [id] netCDF input-file ID */
  const int nc_id_2,                    /* I [id] netCDF input-file ID */
  const int nc_out_id,                  /* I [id] netCDF output-file ID */
@@ -428,18 +428,61 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
 
   /* Print list */
   if(dbg_lvl_get() >= nco_dbg_var && flg_def == True){
-    (void)fprintf(stdout,"%s: INFO %s reports Common objects\n",prg_nm_get(),fnc_nm);
-    (void)fprintf(stdout,"file1     file2\n");
-    (void)fprintf(stdout,"---------------------------------------\n");
-    for(int idx=0;idx<idx_lst;idx++){
-      char c1, c2;
-      c1 = ( (*cmn_lst)[idx].flg_in_fl[0] ) ? 'x' : ' ';
-      c2 = ( (*cmn_lst)[idx].flg_in_fl[1] ) ? 'x' : ' ';
-      (void)fprintf(stdout,"%5c %6c    %-15s\n", c1, c2, (*cmn_lst)[idx].var_nm_fll);
-    } /* end loop over idx */
-    (void)fprintf(stdout,"\n");
+    (void)nco_cmn_nm_prt(*cmn_lst,idx_lst);
   } /* endif dbg */
 
+  /* Export number of entries */
+  *nbr_cmn_nm=idx_lst;
+
+} /* trv_tbl_mch() */
+
+
+void                          
+nco_cmn_nm_prt                         /* [fnc] Print list of common objects (same absolute path) */
+(const nco_cmn_t * const cmn_lst,      /* I [sct] List of common names */
+ const int nbr_cmn_nm)                 /* I [nbr] Number of common names entries */
+{
+  (void)fprintf(stdout,"%s: INFO reports common objects for both files (same absolute path)\n",prg_nm_get());
+  (void)fprintf(stdout,"file1     file2\n");
+  (void)fprintf(stdout,"---------------------------------------\n");
+  for(int idx=0;idx<nbr_cmn_nm;idx++){
+    char c1, c2;
+    c1 = (cmn_lst[idx].flg_in_fl[0]) ? 'x' : ' ';
+    c2 = (cmn_lst[idx].flg_in_fl[1]) ? 'x' : ' ';
+    (void)fprintf(stdout,"%5c %6c    %-15s\n", c1, c2, cmn_lst[idx].var_nm_fll);
+  } /* end loop over idx */
+  (void)fprintf(stdout,"\n");
+
+} /* cmn_nm_prt() */
+
+
+void                          
+nco_prc_cmn_nm                         /* [fnc] Process common objects from a common mames list  */
+(const int nc_id_1,                    /* I [id] netCDF input-file ID */
+ const int nc_id_2,                    /* I [id] netCDF input-file ID */
+ const int nc_out_id,                  /* I [id] netCDF output-file ID */
+ int cnk_map,                          /* I [enm] Chunking map */
+ int cnk_plc,                          /* I [enm] Chunking policy */
+ const size_t cnk_sz_scl,              /* I [nbr] Chunk size scalar */
+ CST_X_PTR_CST_PTR_CST_Y(cnk_sct,cnk), /* I [sct] Chunking information */
+ const int cnk_nbr,                    /* I [nbr] Number of dimensions with user-specified chunking */
+ const int dfl_lvl,                    /* I [enm] Deflate level [0..9] */
+ const gpe_sct * const gpe,            /* I [sct] GPE structure */
+ gpe_nm_sct *gpe_nm,                   /* I/O [sct] GPE name duplicate check array */
+ int nbr_gpe_nm,                       /* I/O [nbr] Number of GPE entries */  
+ const nco_bool CNV_CCM_CCSM_CF,       /* I [flg] File adheres to NCAR CCM/CCSM/CF conventions */
+ const nco_bool FIX_REC_CRD,           /* I [flg] Do not interpolate/multiply record coordinate variables (ncflint only) */
+ CST_X_PTR_CST_PTR_CST_Y(dmn_sct,dmn_xcl), /* I [sct] Dimensions not allowed in fixed variables */
+ const int nbr_dmn_xcl,                /* I [nbr] Number of altered dimensions */
+ const int nco_op_typ,                 /* I [enm] Operation type (command line -y) */
+ trv_tbl_sct * const trv_tbl_1,        /* I/O [sct] GTT (Group Traversal Table) */
+ trv_tbl_sct * const trv_tbl_2,        /* I/O [sct] GTT (Group Traversal Table) */
+ const nco_cmn_t * const cmn_lst,      /* I [sct] List of common names */
+ const int nbr_cmn_nm,                 /* I [nbr] Number of common names entries */
+ const nco_bool flg_def)               /* I [flg] Action type (True for define variables, False when write variables ) */
+{
+ 
+  const char fnc_nm[]="nco_prc_cmn_nm()"; /* [sng] Function name */
 
   int nbr_grp_dpt_1; /* [nbr] Number of depth 1 groups (root = 0)  */
   int nbr_grp_dpt_2; /* [nbr] Number of depth 1 groups (root = 0)  */
@@ -447,20 +490,19 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
   nbr_grp_dpt_1=trv_tbl_inq_dpt(trv_tbl_1);    
   nbr_grp_dpt_2=trv_tbl_inq_dpt(trv_tbl_2);
 
-
   /* Process objects in list */
-  for(int idx=0;idx<idx_lst;idx++){
+  for(int idx=0;idx<nbr_cmn_nm;idx++){
 
     trv_sct *trv_1;    /* [sct] Table object */
     trv_sct *trv_2;    /* [sct] Table object */
 
     nco_bool has_mch;  /* [flg] A relative match was found in file 1 or 2 */
 
-    trv_1=trv_tbl_var_nm_fll((*cmn_lst)[idx].var_nm_fll,trv_tbl_1);
-    trv_2=trv_tbl_var_nm_fll((*cmn_lst)[idx].var_nm_fll,trv_tbl_2);
+    trv_1=trv_tbl_var_nm_fll(cmn_lst[idx].var_nm_fll,trv_tbl_1);
+    trv_2=trv_tbl_var_nm_fll(cmn_lst[idx].var_nm_fll,trv_tbl_2);
 
     /* Both objects exist in the 2 files, both objects are to extract */
-    if(trv_1 && trv_2 && (*cmn_lst)[idx].flg_in_fl[0] && (*cmn_lst)[idx].flg_in_fl[1] && trv_1->flg_xtr && trv_2->flg_xtr){
+    if(trv_1 && trv_2 && cmn_lst[idx].flg_in_fl[0] && cmn_lst[idx].flg_in_fl[1] && trv_1->flg_xtr && trv_2->flg_xtr){
 
       if(dbg_lvl_get() >= nco_dbg_dev) (void)fprintf(stdout,"%s: INFO %s reports common element to output:%s\n",prg_nm_get(),fnc_nm,trv_1->nm_fll); 
 
@@ -477,7 +519,7 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
       if (nbr_grp_dpt_1 > nbr_grp_dpt_2){
 
         /* Object exists only in file 1 and is to extract */
-        if(trv_1 && (*cmn_lst)[idx].flg_in_fl[0] && (*cmn_lst)[idx].flg_in_fl[1] == False && trv_1->flg_xtr){
+        if(trv_1 && cmn_lst[idx].flg_in_fl[0] && cmn_lst[idx].flg_in_fl[1] == False && trv_1->flg_xtr){
 
           if(dbg_lvl_get() >= nco_dbg_dev) (void)fprintf(stdout,"%s: INFO %s reports element in file 1 to output:%s\n",prg_nm_get(),fnc_nm,trv_1->nm_fll);
 
@@ -490,7 +532,7 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
         } /* Object exists only in file 1 and is to extract */
 
         /* Object exists only in file 2 and is to extract */
-        else if(trv_2 && (*cmn_lst)[idx].flg_in_fl[0] == False && (*cmn_lst)[idx].flg_in_fl[1] && trv_2->flg_xtr){
+        else if(trv_2 && cmn_lst[idx].flg_in_fl[0] == False && cmn_lst[idx].flg_in_fl[1] && trv_2->flg_xtr){
 
           if(dbg_lvl_get() >= nco_dbg_dev) (void)fprintf(stdout,"%s: INFO %s reports element in file 2 to output:%s\n",prg_nm_get(),fnc_nm,trv_2->nm_fll);
 
@@ -507,7 +549,7 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
 
 
         /* Object exists only in file 1 and is to extract */
-        if(trv_1 && (*cmn_lst)[idx].flg_in_fl[0] && (*cmn_lst)[idx].flg_in_fl[1] == False && trv_1->flg_xtr){
+        if(trv_1 && cmn_lst[idx].flg_in_fl[0] && cmn_lst[idx].flg_in_fl[1] == False && trv_1->flg_xtr){
 
           if(dbg_lvl_get() >= nco_dbg_dev) (void)fprintf(stdout,"%s: INFO %s reports element in file 1 to output:%s\n",prg_nm_get(),fnc_nm,trv_1->nm_fll);
 
@@ -520,7 +562,7 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
         } /* Object exists only in file 1 and is to extract */
 
         /* Object exists only in file 2 and is to extract */
-        else if(trv_2 && (*cmn_lst)[idx].flg_in_fl[0] == False && (*cmn_lst)[idx].flg_in_fl[1] && trv_2->flg_xtr){
+        else if(trv_2 && cmn_lst[idx].flg_in_fl[0] == False && cmn_lst[idx].flg_in_fl[1] && trv_2->flg_xtr){
 
           if(dbg_lvl_get() >= nco_dbg_dev) (void)fprintf(stdout,"%s: INFO %s reports element in file 2 to output:%s\n",prg_nm_get(),fnc_nm,trv_2->nm_fll);
 
@@ -538,11 +580,9 @@ trv_tbl_mch                            /* [fnc] Match 2 tables (find common obje
 
   } /* Process objects in list */
 
- 
-  /* Export number of entries */
-  *nbr_cmn_nm=idx_lst;
+} /* nco_prc_cmn_nm() */
 
-} /* trv_tbl_mch() */
+
 
 
 void                          
